# Agents_as_a_Service

./: .gitignore  README.md  agents_db.sqlite  main.py  pyproject.toml  requirements.txt
agent/authorization/: Dockerfile  auth_agent.py
agent/chat/: chatbot.py
agent/data_aggregation/: Dockerfile  data_aggregation.py  docker-compose.yml  requirements.txt
agent/file_monitoring/: Dockerfile  file_monitor.py  file_monitor_agent.py
agent/gpt4/: gpt4_agent.py
agent/misc/: custom_agent.py  slm_llm_agent.py  weather_bot.py
agent/monitoring/: monitoring_agent.py
agent/processing/: Dockerfile  processing_agent.py
agent/prompting/: prompt_agent.py
agent/research/: research_agent.py
agent/security_scanner/: Dockerfile  security_scanner.py
agent/sql/: sql_agent.py
agent/tests/: test_workflows.py
backend/: .cursorrules  main.py  requirements.txt
backend/agents/: agent_base.py  process_request.py  task.py  task_scheduler.py
backend/config/: logging.conf  settings.py
backend/database/: database_setup.py
backend/decorators/: retry.py
backend/messaging/: messaging.py
core/: .env.example  agent.py  base_agent.py  completions.py  execution_context.py  functioncall.py  main.py  orchestrator.py  process_base.py  pyvenv.cfg  requirements.txt  schema.py  utils.py
db/: Chinook_Sqlite.sql  agent_db_setup.py  agents_db.sqlite  get_schema.py  schema.json
models/: Dockerfile  requirements.txt  sql-nlp.py
task/: sql_task.py
tests/: conftest.py
webui/: .cursorrules  jsconfig.json  next.config.js  package-lock.json  package.json  tsconfig.json
(+292 files in other folders)
